<resources>
    <string name="app_name">Lab3</string>
    <string name="color_matcher">Color Matcher</string>
    <string name="game_description">Match color name with actual color</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">or</string>
    <string name="welcome_back">Welcome\nBack</string>
    <string name="welcome_back_landscape">Welcome back</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="create_account">Create\nAccount</string>
    <string name="create_account_landscape">Create account</string>
    <string name="select_difficulty">Select difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="start">Start</string>
    <string name="left_word">%s</string>
    <string name="right_word">%s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="score">Your score: %d</string>
    <string name="final_score">%s,\nYou scored: %d points</string>
    <string name="timer">%s</string>
    <string name="game_instructions">Does the color name on the left\nmatch the text color on the right</string>
    <string name="message_congrats">Congratulations!</string>
    <string name="play_again">Play again</string>
    <string name="send_results">Send results on email</string>
    <string name="answer_correct">Correct</string>
    <string name="answer_incorrect">Incorrect</string>
    <string name="results_summary">Congratulations!\n\nYou scored %d points</string>
    <string name="log_in">Log in</string>
    <string name="colormatcher">colormatcher</string>
    <string name="password">Password</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="exit">Exit</string>
    <string name="settings_hide_button">Hide \"Send results on email\" button</string>
    <string name="version">Version</string>
    <string name="version_number">%d</string>
    <string name="results">Results</string>
    <string name="ratings">Ratings</string>
    <string name="emails">Emails</string>
    <string name="rating_score">Score</string>
</resources>