<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lab3.ui.gamemenuscreen.GameMenuFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/undraw_select_option_re_u4qn"
        app:layout_constraintBottom_toTopOf="@id/tvSelectDifficulty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSelectDifficulty"
        style="?attr/textAppearanceHeadline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/select_difficulty"
        android:textColor="@color/teal_500"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/rgGameDifficulties"
        app:layout_constraintStart_toStartOf="@id/rgGameDifficulties" />

    <RadioGroup
        android:id="@+id/rgGameDifficulties"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:checkedButton="@id/rbEasy"
        app:layout_constraintBottom_toTopOf="@id/btnStartGame"
        app:layout_constraintStart_toStartOf="@id/btnStartGame">

        <!-- Add my own style similar to textAppearanceHeadline6 -->
        <RadioButton
            android:id="@+id/rbEasy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy" />

        <RadioButton
            android:id="@+id/rbMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/rbHard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStartGame"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_end"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:background="@drawable/button_login"
        android:text="@string/start"
        android:textAllCaps="false"
        android:textColor="@drawable/registration_screen_button_login_text_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>