<?xml version="1.0" encoding="utf-8"?>

<!-- Add about section -->
<!-- Add license section -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lab3.ui.settings.SettingsFragment">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchHideButton"
        style="?attr/textAppearanceSubtitle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/settings_hide_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvVersion"
        style="?attr/textAppearanceSubtitle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/version"
        app:layout_constraintEnd_toEndOf="@id/switchHideButton"
        app:layout_constraintStart_toStartOf="@id/switchHideButton"
        app:layout_constraintTop_toBottomOf="@id/switchHideButton" />

    <TextView
        android:id="@+id/tvVersionNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/version_number"
        app:layout_constraintStart_toStartOf="@id/tvVersion"
        app:layout_constraintTop_toBottomOf="@+id/tvVersion"
        tools:text="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>