<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lab3.ui.gameresultsscreen.GameResultsFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/undraw_result_re_uj08"
        app:layout_constraintBottom_toTopOf="@id/tvCongrats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvCongrats"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/message_congrats"
        android:textColor="@color/teal_500"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvScore"
        app:layout_constraintStart_toStartOf="@id/tvScore" />


    <TextView
        android:id="@+id/tvScore"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/final_score"
        android:textColor="@color/teal_500_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/btnPlayAgain"
        app:layout_constraintStart_toStartOf="@id/btnPlayAgain"
        tools:text="User,\nYou scored 100 points" />

    <Button
        android:id="@+id/btnPlayAgain"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_login_normal"
        android:text="@string/play_again"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/btnSendResults"
        app:layout_constraintStart_toStartOf="@id/btnSendResults"
        app:layout_constraintBottom_toTopOf="@id/btnSendResults" />

    <!--Change button style to plain text-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSendResults"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_end"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:background="@drawable/registration_screen_button_signup"
        android:text="@string/send_results"
        android:textAllCaps="false"
        android:textColor="@drawable/registration_screen_button_signup_text_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>